--- a/nav/pom.xml
+++ b/nav/pom.xml
@@ -20,6 +20,11 @@
 			<artifactId>org.soluvas.async</artifactId>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.apache.felix</groupId>
+			<artifactId>org.apache.felix.framework</artifactId>
+		</dependency>
+
 		<!-- Pax Wicket Core -->
 		<dependency>
 			<groupId>org.ops4j.pax.wicket</groupId>
