--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -89,6 +89,11 @@
 			</dependency>
 
 			<dependency>
+				<groupId>org.ops4j.pax.web</groupId>
+				<artifactId>pax-web-extender-whiteboard</artifactId>
+				<version>1.0.11</version><!-- 2.0.2 is available, but not default in Karaf 2.2.8 -->
+			</dependency>
+			<dependency>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>org.apache.felix.framework</artifactId>
 				<version>3.0.9</version>
