--- a/jquerynotify/pom.xml
+++ b/jquerynotify/pom.xml
@@ -16,6 +16,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.soluvas</groupId>
+			<artifactId>org.soluvas.web.site</artifactId>
+		</dependency>
+		
+		<dependency>
 			<groupId>org.ops4j.pax.wicket</groupId>
 			<artifactId>org.ops4j.pax.wicket.service</artifactId>
 		</dependency>
