Incomplete - task : Menus change client-side dynamically using Stomp

--- a/nav.shell/pom.xml
+++ b/nav.shell/pom.xml
@@ -23,7 +23,7 @@
 
 		<dependency>
 			<groupId>org.soluvas</groupId>
-			<artifactId>org.soluvas.async</artifactId>
+			<artifactId>soluvas-async</artifactId>
 		</dependency>
 		
 		<dependency>
