--- a/nav/pom.xml
+++ b/nav/pom.xml
@@ -17,7 +17,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.soluvas</groupId>
-			<artifactId>org.soluvas.async</artifactId>
+			<artifactId>soluvas-async</artifactId>
 		</dependency>
 		
 		<dependency>
