--- a/stomp/pom.xml
+++ b/stomp/pom.xml
@@ -23,6 +23,10 @@
 			<groupId>org.soluvas</groupId>
 			<artifactId>org.soluvas.web.nav</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.soluvas</groupId>
+			<artifactId>org.soluvas.process</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.ops4j.pax.wicket</groupId>
