--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -33,6 +33,7 @@
 	</licenses>
 
 	<properties>
+		<wicket.version>1.5.7</wicket.version>
 		<emf.version>2.8.0.v20120606-0717</emf.version>
 	</properties>
 
@@ -110,14 +111,24 @@
 			<dependency>
 				<groupId>org.ops4j.pax.wicket</groupId>
 				<artifactId>org.ops4j.pax.wicket.service</artifactId>
-				<version>1.0.1</version>
+				<version>1.0.2</version>
 			</dependency>
 			<!-- Pax Wicket Test Utilities -->
 			<dependency>
 				<groupId>org.ops4j.pax.wicket</groupId>
 				<artifactId>org.ops4j.pax.wicket.test</artifactId>
-				<version>1.0.1</version>
+				<version>1.0.2</version>
 				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.wicket</groupId>
+				<artifactId>wicket</artifactId>
+				<version>${wicket.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.wicket</groupId>
+				<artifactId>wicket-extensions</artifactId>
+				<version>${wicket.version}</version>
 			</dependency>
 
 			<dependency>
@@ -188,6 +199,7 @@
 				<configuration>
 					<instructions>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+						<Import-Package>org.eclipse.emf.*;version="",*</Import-Package>
 					</instructions>
 				</configuration>
 			</plugin>
