ObjectMapper and Backbone support

--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -19,7 +19,11 @@
 			<groupId>org.soluvas</groupId>
 			<artifactId>org.soluvas.web.site</artifactId>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.soluvas</groupId>
+			<artifactId>soluvas-json</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.ops4j.pax.wicket</groupId>
 			<artifactId>org.ops4j.pax.wicket.service</artifactId>
