--- a/backbone/pom.xml
+++ b/backbone/pom.xml
@@ -21,6 +21,11 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>org.antlr</groupId>
+			<artifactId>stringtemplate</artifactId>
+			<version>4.0.2</version>
+		</dependency>
+		<dependency>
 			<groupId>javax.ws.rs</groupId>
 			<artifactId>jsr311-api</artifactId>
 		</dependency>
