--- a/jquery/pom.xml
+++ b/jquery/pom.xml
@@ -12,6 +12,7 @@
 	<artifactId>org.soluvas.web.jquery</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>bundle</packaging>
+	<name>Soluvas Web jQuery</name>
 	<description>jQuery library.</description>
 
 	<dependencies>
