--- a/jqueryui/pom.xml
+++ b/jqueryui/pom.xml
@@ -12,6 +12,7 @@
 	<artifactId>org.soluvas.web.jqueryui</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>bundle</packaging>
+	<name>Soluvas Web jQuery UI</name>
 	<description>jQuery UI library.</description>
 
 	<dependencies>
