--- a/nav.ui/pom.xml
+++ b/nav.ui/pom.xml
@@ -12,6 +12,7 @@
 	<artifactId>org.soluvas.web.nav.ui</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>bundle</packaging>
+	<name>Soluvas Web Nav UI</name>
 	<description>Soluvas Web Nav UI elements.</description>
 
 	<dependencies>
