--- a/nav/pom.xml
+++ b/nav/pom.xml
@@ -12,7 +12,8 @@
 	<artifactId>org.soluvas.web.nav</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>bundle</packaging>
-	<description>Soluvas Nav.</description>
+	<name>Soluvas Web Nav</name>
+	<description>Soluvas Web Nav.</description>
 
 	<dependencies>
 		<dependency>
