--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -199,7 +199,7 @@
 				<configuration>
 					<instructions>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Import-Package>org.eclipse.emf.*;version="",*</Import-Package>
+						<Import-Package>org.eclipse.emf.*;!version,*</Import-Package>
 					</instructions>
 				</configuration>
 			</plugin>
