--- a/site/pom.xml
+++ b/site/pom.xml
@@ -12,6 +12,7 @@
 	<artifactId>org.soluvas.web.site</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>bundle</packaging>
+	<name>Soluvas Web Site</name>
 	<description>Core Site API and Services.</description>
 
 	<dependencies>
