--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -122,7 +122,7 @@
 			</dependency>
 			<dependency>
 				<groupId>org.apache.wicket</groupId>
-				<artifactId>wicket</artifactId>
+				<artifactId>wicket-spring</artifactId>
 				<version>${wicket.version}</version>
 			</dependency>
 			<dependency>
