--- a/login/pom.xml
+++ b/login/pom.xml
@@ -112,7 +112,7 @@
 							<executable>bash</executable>
 							<arguments>
 								<argument>-c</argument>
-								<argument>handlebars src/main/resources/templates_web/*.mustache --amd --output src/main/resources/js/templates.js</argument>
+								<argument>/usr/local/bin/handlebars src/main/resources/templates_web/*.mustache --amd --output src/main/resources/js/templates.js</argument>
 							</arguments>
 						</configuration>
 					</execution>
