--- a/site/pom.xml
+++ b/site/pom.xml
@@ -47,6 +47,10 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.soluvas</groupId>
 			<artifactId>soluvas-json</artifactId>
 		</dependency>
