--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -34,7 +34,7 @@
 
 	<properties>
 <!-- 		<wicket.version>1.5.7</wicket.version> -->
-		<emf.version>2.8.0.v20120606-0717</emf.version>
+		<emf.version>2.8.0.v20120911-0500</emf.version><!-- Note: ecore has different version -->
 	</properties>
 
 	<dependencyManagement>
@@ -139,7 +139,7 @@
 			<dependency>
 				<groupId>org.eclipse.emf</groupId>
 				<artifactId>org.eclipse.emf.ecore</artifactId>
-				<version>${emf.version}</version>
+				<version>2.8.1.v20120911-0500</version>
 			</dependency>
 			<dependency>
 				<groupId>org.eclipse.emf</groupId>
