add Sonatype repo

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -208,6 +208,13 @@
 
 	<repositories>
 		<repository>
+			<id>sonatype-nexus</id>
+			<url>https://oss.sonatype.org/content/groups/public/</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+		<repository>
 			<id>bippo-nexus-public</id>
 			<url>http://nexus.bippo.co.id/nexus/content/groups/public/</url>
 			<snapshots>
