Refs #723, #730, #731. Summary: 1. Bug fixing for new Product. 2. Banner.

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -64,6 +64,16 @@
 				<artifactId>org.soluvas.web.nav.shell</artifactId>
 				<version>${project.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>org.soluvas</groupId>
+				<artifactId>org.soluvas.web.login</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.soluvas</groupId>
+				<artifactId>org.soluvas.web.banner</artifactId>
+				<version>${project.version}</version>
+			</dependency>
 
 			<dependency>
 				<groupId>org.soluvas</groupId>
