--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,8 @@
 		<module>nav</module>
 		<module>nav.shell</module>
 		<module>nav.ui</module>
+		<!-- Reusable components -->
+		<module>banner</module>
 		<!-- Functionality -->
 		<module>login</module>
 	</modules>
