--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -122,6 +122,12 @@
 				<groupId>org.ops4j.pax.wicket</groupId>
 				<artifactId>org.ops4j.pax.wicket.service</artifactId>
 				<version>1.1.0</version>
+				<exclusions>
+					<exclusion>
+						<artifactId>ops4j-base</artifactId>
+						<groupId>org.ops4j.base</groupId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 			<!-- Pax Wicket Test Utilities -->
 			<dependency>
@@ -129,6 +135,12 @@
 				<artifactId>org.ops4j.pax.wicket.test</artifactId>
 				<version>1.1.0</version>
 				<scope>test</scope>
+				<exclusions>
+					<exclusion>
+						<artifactId>ops4j-base</artifactId>
+						<groupId>org.ops4j.base</groupId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 <!-- 			<dependency> -->
 <!-- 				<groupId>org.apache.wicket</groupId> -->
