--- a/backbone/pom.xml
+++ b/backbone/pom.xml
@@ -17,6 +17,12 @@
 
 	<dependencies>
 		<dependency>
+			<!-- TODO: move this somewhere -->
+			<groupId>com.soluvas</groupId>
+			<artifactId>com.soluvas.cxf</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.soluvas</groupId>
 			<artifactId>org.soluvas.web.site</artifactId>
 		</dependency>
@@ -29,6 +35,12 @@
 		<dependency>
 			<groupId>javax.ws.rs</groupId>
 			<artifactId>jsr311-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<!-- 		<dependency> -->
