WebAddress API Path. ACCEPTED - task 929: SiteConfig and JAX-RS API URI http://mahameru.unfuddle.com/projects/1/tickets/by_number/929

--- a/backbone/pom.xml
+++ b/backbone/pom.xml
@@ -51,6 +51,11 @@
 <!-- 			<groupId>org.ops4j.pax.wicket</groupId> -->
 <!-- 			<artifactId>org.ops4j.pax.wicket.test</artifactId> -->
 <!-- 		</dependency> -->
+
+		<dependency>
+			<groupId>com.google.code.findbugs</groupId>
+			<artifactId>jsr305</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
