--- a/site/pom.xml
+++ b/site/pom.xml
@@ -20,6 +20,10 @@
 			<groupId>org.soluvas</groupId>
 			<artifactId>soluvas-commons</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.soluvas</groupId>
+			<artifactId>soluvas-jaxrs</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.antlr</groupId>
