--- a/nav.ui/pom.xml
+++ b/nav.ui/pom.xml
@@ -85,11 +85,14 @@
 	<!-- 						net.sf.cglib.proxy;version="[2,3)", -->
 	<!-- 						net.sf.cglib.core;version="[2,3)", -->
 	<!-- 						net.sf.cglib.reflect;version="[2,3)",*</Import-Package> -->
-						<Import-Package>*, javax.servlet,javax.servlet.http,
+						<Import-Package>
+							org.soluvas.web.nav.impl,
+							javax.servlet,javax.servlet.http,
 							org.ops4j.pax.wicket.util.proxy,
 							net.sf.cglib.proxy;version="[2,3)",
 							net.sf.cglib.core;version="[2,3)",
-							net.sf.cglib.reflect;version="[2,3)"</Import-Package>
+							net.sf.cglib.reflect;version="[2,3)",
+							*</Import-Package>
 <!-- 						<Require-Bundle>org.ops4j.pax.wicket.service, -->
 <!-- 							com.typesafe.config, com.typesafe.akka.actor, org.scala-ide.scala.library</Require-Bundle> -->
 						<Require-Bundle>org.ops4j.pax.wicket.service</Require-Bundle>
