--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -33,6 +33,7 @@
 	</licenses>
 
 	<properties>
+		<pax-wicket.version>1.1.1</pax-wicket.version>
 		<wicket.version>1.5.8</wicket.version><!-- workaround for ... -->
 		<emf.version>2.8.0.v20120911-0500</emf.version><!-- Note: ecore has different version -->
 	</properties>
@@ -121,7 +122,7 @@
 			<dependency>
 				<groupId>org.ops4j.pax.wicket</groupId>
 				<artifactId>org.ops4j.pax.wicket.service</artifactId>
-				<version>1.1.0</version>
+				<version>${pax-wicket.version}</version>
 				<exclusions>
 					<exclusion>
 						<artifactId>ops4j-base</artifactId>
@@ -139,7 +140,7 @@
 			<dependency>
 				<groupId>org.ops4j.pax.wicket</groupId>
 				<artifactId>org.ops4j.pax.wicket.test</artifactId>
-				<version>1.1.0</version>
+				<version>${pax-wicket.version}</version>
 				<scope>test</scope>
 				<exclusions>
 					<exclusion>
