--- a/login/pom.xml
+++ b/login/pom.xml
@@ -31,6 +31,11 @@
 		
 		<dependency>
 			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-web</artifactId>
+			<version>1.2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
 			<artifactId>shiro-core</artifactId>
 			<version>1.2.1</version>
 		</dependency>
