NEW - task 928: Login / Authentication system using Apache Shiro http://mahameru.unfuddle.com/projects/1/tickets/by_number/928

--- a/nav.ui/pom.xml
+++ b/nav.ui/pom.xml
@@ -18,6 +18,10 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.soluvas</groupId>
+			<artifactId>org.soluvas.web.login</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.soluvas</groupId>
 			<artifactId>org.soluvas.web.nav</artifactId>
 		</dependency>
 		<dependency>
