--- a/login/pom.xml
+++ b/login/pom.xml
@@ -28,7 +28,11 @@
 			<artifactId>soluvas-json</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.soluvas</groupId>
+			<artifactId>soluvas-ldap</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.apache.shiro</groupId>
 			<artifactId>shiro-web</artifactId>
@@ -38,6 +42,11 @@
 			<groupId>org.apache.shiro</groupId>
 			<artifactId>shiro-core</artifactId>
 			<version>1.2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.directory.shared</groupId>
+			<artifactId>shared-ldap-client-api</artifactId>
+			<version>1.0.0-M13</version>
 		</dependency>
 
 		<dependency>
@@ -72,6 +81,10 @@
 			<artifactId>hamcrest-all</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.code.findbugs</groupId>
+			<artifactId>jsr305</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
