--- a/login/pom.xml
+++ b/login/pom.xml
@@ -21,6 +21,10 @@
 		</dependency>
 		<dependency>
 			<groupId>org.soluvas</groupId>
+			<artifactId>org.soluvas.security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.soluvas</groupId>
 			<artifactId>soluvas-commons</artifactId>
 		</dependency>
 		<dependency>
@@ -47,6 +51,10 @@
 			<groupId>org.apache.directory.shared</groupId>
 			<artifactId>shared-ldap-client-api</artifactId>
 			<version>1.0.0-M13</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
 		</dependency>
 
 		<dependency>
@@ -113,7 +121,6 @@
 				<artifactId>maven-bundle-plugin</artifactId>
 				<configuration>
 					<instructions>
-<!-- 						<Import-Package> -->
 <!-- 							org.apache.felix.gogo.commands;version="0.6.0", -->
 <!-- 							org.apache.karaf.shell.console,org.osgi.framework;version="1.3.0", -->
 <!-- 							*</Import-Package> -->
