--- a/nav/pom.xml
+++ b/nav/pom.xml
@@ -125,6 +125,10 @@
 		-->
 
 		<dependency>
+			<groupId>com.google.code.findbugs</groupId>
+			<artifactId>jsr305</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 		</dependency>
