--- a/nav.ui/pom.xml
+++ b/nav.ui/pom.xml
@@ -33,7 +33,11 @@
 			<groupId>org.ops4j.pax.wicket</groupId>
 			<artifactId>org.ops4j.pax.wicket.service</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.osgi</groupId>
+			<artifactId>org.osgi.core</artifactId>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.eclipse.emf</groupId>
 			<artifactId>org.eclipse.emf.common</artifactId>
