--- a/nav/pom.xml
+++ b/nav/pom.xml
@@ -22,8 +22,8 @@
 		</dependency>
 		
 		<dependency>
-			<groupId>org.apache.felix</groupId>
-			<artifactId>org.apache.felix.framework</artifactId>
+			<groupId>org.osgi</groupId>
+			<artifactId>org.osgi.core</artifactId>
 		</dependency>
 
 		<!-- Pax Wicket Core -->
