--- a/login/pom.xml
+++ b/login/pom.xml
@@ -62,8 +62,8 @@
 			<artifactId>org.apache.karaf.shell.console</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.felix</groupId>
-			<artifactId>org.apache.felix.framework</artifactId>
+			<groupId>org.osgi</groupId>
+			<artifactId>org.osgi.core</artifactId>
 		</dependency>
 
 		<dependency>
