--- a/login/pom.xml
+++ b/login/pom.xml
@@ -25,16 +25,16 @@
 		</dependency>
 		<dependency>
 			<groupId>org.soluvas</groupId>
-			<artifactId>soluvas-commons</artifactId>
+			<artifactId>org.soluvas.commons</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.soluvas</groupId>
-			<artifactId>soluvas-json</artifactId>
+			<artifactId>org.soluvas.json</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.soluvas</groupId>
-			<artifactId>soluvas-ldap</artifactId>
+			<artifactId>org.soluvas.ldap</artifactId>
 		</dependency>
 
 		<dependency>
