--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -77,8 +77,8 @@
 
 			<dependency>
 				<groupId>org.soluvas</groupId>
-				<artifactId>soluvas-parent</artifactId>
-				<version>1.1.0-SNAPSHOT</version>
+				<artifactId>org.soluvas.parent</artifactId>
+				<version>2.0.0-SNAPSHOT</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
