--- a/nav.shell/pom.xml
+++ b/nav.shell/pom.xml
@@ -30,6 +30,10 @@
 			<groupId>org.apache.karaf.shell</groupId>
 			<artifactId>org.apache.karaf.shell.console</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.osgi</groupId>
+			<artifactId>org.osgi.core</artifactId>
+		</dependency>
 
 		<!--
 		<dependency>
