--- a/nav/pom.xml
+++ b/nav/pom.xml
@@ -23,6 +23,10 @@
 		
 		<dependency>
 			<groupId>org.osgi</groupId>
+			<artifactId>org.osgi.compendium</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.osgi</groupId>
 			<artifactId>org.osgi.core</artifactId>
 		</dependency>
 
