--- a/site/pom.xml
+++ b/site/pom.xml
@@ -28,6 +28,10 @@
 			<groupId>org.soluvas</groupId>
 			<artifactId>org.soluvas.jaxrs</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.antlr</groupId>
