--- a/site/pom.xml
+++ b/site/pom.xml
@@ -141,17 +141,15 @@
 				<configuration>
 					<instructions>
 						<!-- Required imports of Pax Wicket, see http://team.ops4j.org/wiki/display/paxwicket/Wicket+Applications+(Quick) -->
-	<!-- 					<Import-Package>javax.servlet,javax.servlet.http, -->
-	<!-- 						org.apache.wicket.event,org.apache.wicket.settings, -->
-	<!-- 						org.apache.wicket.request,org.apache.wicket.request.http,org.apache.wicket.request.cycle, -->
-	<!-- 						org.apache.wicket.util,org.apache.wicket.util.file, -->
-	<!-- 						org.apache.wicket.ajax, -->
-	<!-- 						org.ops4j.pax.wicket.util.proxy, -->
-	<!-- 						net.sf.cglib.proxy;version="[2,3)", -->
-	<!-- 						net.sf.cglib.core;version="[2,3)", -->
-	<!-- 						net.sf.cglib.reflect;version="[2,3)",*</Import-Package> -->
 						<Import-Package>*,
 							org.apache.wicket,
+							org.apache.wicket.application,
+							org.apache.wicket.behavior,
+							org.apache.wicket.markup,
+							org.apache.wicket.markup.html,
+							org.apache.wicket.markup.repeater,
+							org.apache.wicket.model,
+							org.apache.wicket.util.string,
 							javax.servlet, javax.servlet.http,
 							org.ops4j.pax.wicket.util.proxy,
 							net.sf.cglib.proxy;version="[2,3)",
@@ -160,7 +158,6 @@
               				org.apache.felix.service.command;resolution:=optional, 
                             org.apache.felix.gogo.commands;resolution:=optional 							
 						</Import-Package>
-						<Require-Bundle>org.ops4j.pax.wicket.service</Require-Bundle>
 						<DynamicImport-Package>*</DynamicImport-Package> <!-- why? http://team.ops4j.org/browse/PAXWICKET-375 -->
 					</instructions>
 				</configuration>
