--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -46,6 +46,11 @@
 			<groupId>org.eclipse.emf</groupId>
 			<artifactId>org.eclipse.emf.ecore.xmi</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.osgi</groupId>
+			<artifactId>org.osgi.core</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>com.google.guava</groupId>
