Refs #125. Summary: 1. SalesOrder Web for Sys/Mall/Shop, they are not complete..

--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -86,6 +86,7 @@
 					<instructions>
 						<!-- Required imports of Pax Wicket, see http://team.ops4j.org/wiki/display/paxwicket/Wicket+Applications+(Quick) -->
 						<Import-Package>
+							org.apache.wicket,
 							org.soluvas.web.site,
 							org.slf4j,
 							javax.servlet,javax.servlet.http,
