OPEN - task fixed #12: IModel support and Mustache templating in PageMeta  http://github.com/soluvas/soluvas-web/issues/issue/12

--- a/site/pom.xml
+++ b/site/pom.xml
@@ -28,6 +28,11 @@
 			<groupId>org.soluvas</groupId>
 			<artifactId>org.soluvas.jaxrs</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.github.spullara.mustache.java</groupId>
+			<artifactId>compiler</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
