soluvas.process (not used) NEW - # 228: Separate Product and ProductInfo https://bitbucket.org/bippo/bippo-commerce5/issue/228/

--- a/process.stomp/pom.xml
+++ b/process.stomp/pom.xml
@@ -27,6 +27,7 @@
 		<dependency>
 			<groupId>org.soluvas</groupId>
 			<artifactId>org.soluvas.process</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
