--- a/site/pom.xml
+++ b/site/pom.xml
@@ -85,6 +85,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.damnhandy</groupId>
+			<artifactId>handy-uri-templates</artifactId>
+			<version>1.1.7</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 		</dependency>
