--- a/site/pom.xml
+++ b/site/pom.xml
@@ -17,6 +17,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.damnhandy</groupId>
+			<artifactId>handy-uri-templates</artifactId>
+			<version>1.1.7</version>
+		</dependency>
+		<dependency>
 			<groupId>org.soluvas</groupId>
 			<artifactId>org.soluvas.security</artifactId>
 		</dependency>
