--- a/login/pom.xml
+++ b/login/pom.xml
@@ -13,6 +13,10 @@
 	<packaging>bundle</packaging>
 	<name>Soluvas Web Login</name>
 	<description>Generic login forms and pages.</description>
+	
+	<properties>
+		<handlebars.dir>/usr/local/bin</handlebars.dir>
+	</properties>
 
 	<dependencies>
 		<dependency>
@@ -146,7 +150,7 @@
 							<arguments>
 								<argument>-c</argument>
 <!-- 								/usr/local/bin/handlebars -->
-								<argument>handlebars src/main/resources/templates_web/*.mustache --amd --output src/main/resources/js/templates.js</argument>
+								<argument>${handlebars.dir}/handlebars src/main/resources/templates_web/*.mustache --amd --output src/main/resources/js/templates.js</argument>
 							</arguments>
 						</configuration>
 					</execution>
