--- a/login/pom.xml
+++ b/login/pom.xml
@@ -136,25 +136,27 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>precompile-mustache</id>
-						<phase>generate-resources</phase>
-						<goals>
-							<goal>exec</goal>
-						</goals>
-						<inherited>false</inherited>
-						<configuration>
+				<!-- not working yet with CloudBees, due to PATH setting, so disabled for now -->
+<!-- 				<executions> -->
+<!-- 					<execution> -->
+<!-- 						<id>precompile-mustache</id> -->
+<!-- 						<phase>generate-resources</phase> -->
+<!-- 						<goals> -->
+<!-- 							<goal>exec</goal> -->
+<!-- 						</goals> -->
+<!-- 						<inherited>false</inherited> -->
+<!-- 						<configuration> -->
 							<!-- need wildcard expansion, so need bash -->
-							<executable>bash</executable>
-							<arguments>
-								<argument>-c</argument>
+<!-- 							<executable>bash</executable> -->
+<!-- 							<arguments> -->
+<!-- 								<argument>-c</argument> -->
 <!-- 								/usr/local/bin/handlebars -->
-								<argument>${handlebars.dir}/handlebars src/main/resources/templates_web/*.mustache --amd --output src/main/resources/js/templates.js</argument>
-							</arguments>
-						</configuration>
-					</execution>
-				</executions>
+										<!-- WARNING: check argument for double "-" when uncommenting -->
+<!-- 								<argument>${handlebars.dir}/handlebars src/main/resources/templates_web/*.mustache - -amd - -output src/main/resources/js/templates.js</argument> -->
+<!-- 							</arguments> -->
+<!-- 						</configuration> -->
+<!-- 					</execution> -->
+<!-- 				</executions> -->
 			</plugin>
 		</plugins>
 		<pluginManagement>
