--- a/login/pom.xml
+++ b/login/pom.xml
@@ -193,5 +193,12 @@
 			</plugins>
 		</pluginManagement>
 	</build>
+	
+	<repositories>
+	    <repository>
+	      <id>google-api-services</id>
+	      <url>http://google-api-client-libraries.appspot.com/mavenrepo</url>
+	    </repository>
+	</repositories>
 
 </project>
