Refs#494 adding olark module

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
 		<module>banner</module>
 		<!-- Functionality -->
 		<module>login</module>
+		<module>olark</module>
 	</modules>
 
 </project>
