Refs#495 create ecore diagram

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
 		<!-- Functionality -->
 		<module>login</module>
 		<module>olark</module>
+		<module>googleanalytics</module>
 	</modules>
 
 </project>
