--- a/googleanalytics/pom.xml
+++ b/googleanalytics/pom.xml
@@ -55,40 +55,41 @@
 			<groupId>org.soluvas</groupId>
 			<artifactId>org.soluvas.image</artifactId>
 		</dependency>
-		 <dependency>
-			<groupId>com.restfb</groupId>
-			<artifactId>restfb</artifactId>
-		</dependency>
-		<dependency>
-		  <groupId>org.expressme</groupId>
-		  <artifactId>JOpenId</artifactId>
-		  <version>1.08</version>
-		</dependency>
-		<dependency>
-		    <groupId>org.twitter4j</groupId>
-		    <artifactId>twitter4j-core</artifactId>
-		    <version>3.0.3</version>
-		</dependency>
-		<dependency>
-		    <groupId>com.google.http-client</groupId>
-		    <artifactId>google-http-client-jackson2</artifactId>
-		    <version>1.13.1-beta</version>
-		</dependency>
-		<dependency>
-      		<groupId>com.google.api-client</groupId>
-      		<artifactId>google-api-client</artifactId>
-      		<version>1.13.2-beta</version>
-    	</dependency>
+		
+<!-- 		 <dependency> -->
+<!-- 			<groupId>com.restfb</groupId> -->
+<!-- 			<artifactId>restfb</artifactId> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 		  <groupId>org.expressme</groupId> -->
+<!-- 		  <artifactId>JOpenId</artifactId> -->
+<!-- 		  <version>1.08</version> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 		    <groupId>org.twitter4j</groupId> -->
+<!-- 		    <artifactId>twitter4j-core</artifactId> -->
+<!-- 		    <version>3.0.3</version> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 		    <groupId>com.google.http-client</groupId> -->
+<!-- 		    <artifactId>google-http-client-jackson2</artifactId> -->
+<!-- 		    <version>1.13.1-beta</version> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!--       		<groupId>com.google.api-client</groupId> -->
+<!--       		<artifactId>google-api-client</artifactId> -->
+<!--       		<version>1.13.2-beta</version> -->
+<!--     	</dependency> -->
 <!-- 		<dependency> -->
 <!--       		<groupId>com.google.api-client</groupId> -->
 <!--       		<artifactId>google-api-client-servlet</artifactId> -->
 <!--       		<version>1.13.0-beta</version> -->
 <!--     	</dependency> -->
-	    <dependency>
-	      <groupId>com.google.apis</groupId>
-	      <artifactId>google-api-services-plus</artifactId>
-	      <version>v1-rev49-1.13.2-beta</version>
-	    </dependency>
+<!-- 	    <dependency> -->
+<!-- 	      <groupId>com.google.apis</groupId> -->
+<!-- 	      <artifactId>google-api-services-plus</artifactId> -->
+<!-- 	      <version>v1-rev49-1.13.2-beta</version> -->
+<!-- 	    </dependency> -->
 
 		<dependency>
 			<groupId>org.apache.shiro</groupId>
@@ -174,7 +175,7 @@
 				<artifactId>maven-bundle-plugin</artifactId>
 				<configuration>
 					<instructions>
-						<Export-Package>org.soluvas.web.olark.*</Export-Package>
+						<Export-Package>org.soluvas.web.googleanalytics.*</Export-Package>
 <!-- 							org.apache.felix.gogo.commands;version="0.6.0", -->
 <!-- 							org.apache.karaf.shell.console,org.osgi.framework;version="1.3.0", -->
 <!-- 							*</Import-Package> -->
